# webpack-5-wasm-reftypes

./: .gitignore  Cargo.toml  README.md  package.json  webpack.config.js
src/: index.js  lib.rs
