[package]
authors = ["Mario Reder <mario.reder@maibornwolff.de>"]
description = "ReactDOM implemented in Rust, compiled to WebAssembly."
license = "Apache-2.0/MIT"
name = "webpack-5-wasm-reftypes"
readme = "./README.md"
repository = "https://github.com/Tarnadas/webpack-5-wasm-reftypes"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "console"
]

[profile]
[profile.release]
debug = false
lto = true
codegen-units = 1
opt-level = 3
